# mario.c

./: CMakeLists.txt  LICENSE  README.md
include/: block.h  camera.h  collision.h  enemy.h  game.h  item.h  level.h  platform.h  player.h
include/operations/: basic.h
src/: basic.c  camera.c  collision.c  enemy.c  game.c  item.c  level.c  main.c  platform.c  player.c
